5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2472.log
== TEST (2019-05-02 20:10:15) 
-- CODE:
r1 = input("Resposta:")
r2 = input("Resposta:")
r3 = input("Resposta:")
b1 = input("Resposta:")
b2 = input("Resposta:")
b3 = input("Resposta")


if(r1==b1):
	x=x+1
	if(r2==b2):
		x=x+1
		if(r3==b3):
			x=x+1
			print(x)
		else:
			print(x)
	else:
		if(r3==b3):
			x=x+1
			print(x)
else:
	if(r2==b2):
		x=x+1
		if(r3==b3):
			x=x+1
		else:
			print(x)
	else:
		if(r3==b3):
			x=x+1
			print(x)
		else:
			print(x)
if(r3==b3):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 34, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:11:37) 
-- CODE:
r1 = input("Resposta:")
r2 = input("Resposta:")
r3 = input("Resposta:")
b1 = input("Resposta:")
b2 = input("Resposta:")
b3 = input("Resposta:")
x=0
if(r1==b1):
	x = x + 1
	if(r2==b2):
		x=x+1
		if(r3==b3):
			x=x+1
			print(x)
		else:
			print(x)
	else:
		if(r3==b3):
			x=x+1
			print(x)
else:
	if(r2==b2):
		x=x+1
		if(r3==b3):
			x=x+1
		else:
			print(x)
	else:
		if(r3==b3):
			x=x+1
			print(x)
		else:
			print(x)
if(r3==b3):
	print(1)
else:
	print(0)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:15:24) 
-- CODE:
r1 = input("Resposta:")
r2 = input("Resposta:")
r3 = input("Resposta:")
b1 = input("Resposta:")
b2 = input("Resposta:")
b3 = input("Resposta:")
x=0
if(r1==b1):
	x = x + 1
else:
	x=x
if(r2==b2):
	x =x + 1
else:x=x
if(r3==b3):
	x = x + 1
else:
	x=x
print(x)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:15:41) 
-- CODE:
r1 = input("Resposta:")
r2 = input("Resposta:")
r3 = input("Resposta:")
b1 = input("Resposta:")
b2 = input("Resposta:")
b3 = input("Resposta:")
x=0
if(r1==b1):
	x = x + 1
else:
	x=x
if(r2==b2):
	x =x + 1
else:x=x
if(r3==b3):
	x = x + 1
else:
	x=x
print(x)
-- OUTPUT:
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 20:16:07) 
-- CODE:
r1 = input("Resposta:")
r2 = input("Resposta:")
r3 = input("Resposta:")
b1 = input("Resposta:")
b2 = input("Resposta:")
b3 = input("Resposta:")
x=0
if(r1==b1):
	x = x + 1
else:
	x=x
if(r2==b2):
	x =x + 1
else:x=x
if(r3==b3):
	x = x + 1
else:
	x=x
print(x)
-- EXECUTION TIME:
0.124335
-- TEST CASE 1:
---- input:
a
b
c
d
e
a
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
a
b
c
a
b
c
---- correct output:
3
---- user output:
3
-- TEST CASE 3:
---- input:
c
d
e
c
d
c
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
